forms with g chechout deploy

--- a/app/views/mailer/trademark_search.html.erb
+++ b/app/views/mailer/trademark_search.html.erb
@@ -1,4 +1,4 @@
-<h1>Trademarks Form <%= SITE_DOMAIN %></h1>
+<h1>Trademark Search Form <%= SITE_DOMAIN %></h1>
 <p>&nbsp;</p>
 <table>
 	<% @params.each do |param, value| %>
