fix patense search form

--- a/app/views/pages/patent_search.html.erb
+++ b/app/views/pages/patent_search.html.erb
@@ -77,9 +77,9 @@
     	</p>
     	<p class="first none">
     		<%= f.label(:images, "<strong>5.</strong> Upload Pictures or Diagrams that Describe your Invention:") %>
-    		<%#= f.file_field :image1, :size => false %>
-    		<%#= f.file_field :image2, :size => false %>
-    		<%#= f.file_field :image3, :size => false %>
+    		<%= f.file_field :image1, :size => false %>
+    		<%= f.file_field :image2, :size => false %>
+    		<%= f.file_field :image3, :size => false %>
     		<small>It is highly suggested that a picture, diagram, or flowchart be provided to help describe your invention. Computer or hand sketch drawings are fine.</small>
     	</p>
     	<p class="first">
