--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -17,7 +17,7 @@
   		<%= f.label(:address) %>
   		<%= f.text_field :address, :class => "required" %>
   	</p>
-  	<p class="textarea">
+  	<p class="textarea fix">
   		<%= f.label(:message) %>
   		<%= f.text_area :message, :class => "required" %>
   	</p>
