--- a/app/views/questionnaire/questions.html.erb
+++ b/app/views/questionnaire/questions.html.erb
@@ -2,8 +2,10 @@
 <div class="content_cms">
   <%= @page.body rescue "" %>
 </div>
-<%= error_messages_for @object.class.to_s.underscore.to_sym %>
-<% form_for(@answer, :url => answer_save_and_continue_path, :live_validations => true, :html => { :method => :put }) do |f| %>
-  <%= render :partial => "question", :locals => { :f => f }, :object => @question %>
-  <p><%= link_to "Back", questionnaire_questions_path("questions", @question.previous) if @question.first? %><%= submit_tag "Save & Continue" %></p>
-<% end %>
+<div id="questionnaire">
+  <%= error_messages_for @object.class.to_s.underscore.to_sym %>
+  <% form_for(@answer, :url => answer_save_and_continue_path, :live_validations => true, :html => { :method => :put }) do |f| %>
+    <%= render :partial => "question", :locals => { :f => f }, :object => @question %>
+    <p><%= link_to "Back", questionnaire_questions_path("questions", @question.previous) if @question.first? %><%= submit_tag "Save & Continue" %></p>
+  <% end %>
+</div>
