--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -4,5 +4,5 @@
 </p>
 <p>
   <%= f.label :help %>
-  <%= f.text_field :help %>
+  <%= fckeditor_textarea "question", "help", :height => "200px" %>
 </p>
