--- a/app/views/questionnaire/questions.html.erb
+++ b/app/views/questionnaire/questions.html.erb
@@ -1,4 +1,4 @@
-<h1>Questionnaire &raquo; Question <%= params[:position].to_i+1 %></h1>
+<h1>Provisional Patent Questionnaire &raquo; Question <%= params[:position].to_i+1 %></h1>
 <div class="content_cms">
   <%= @page.body rescue "" %>
 </div>
@@ -6,6 +6,18 @@
   <%= error_messages_for @object.class.to_s.underscore.to_sym %>
   <% form_for(@answer, :url => answer_save_and_continue_path, :live_validations => true, :html => { :method => :put }) do |f| %>
     <%= render :partial => "question", :locals => { :f => f }, :object => @question %>
-    <p><%= link_to "Back", questionnaire_questions_path("questions", @question.previous) if @question.first? %><%= submit_tag "Save & Continue" %></p>
+    <div id="actions">
+      <div id="progress_bar">
+        dsadsadsa
+      </div>
+      <div id="buttons">
+      <% if @question.first?  %>
+        <%= link_to "Back", questionnaire_questions_path("questions", @question.previous), :class => "back replacement" %>
+        <%= submit_tag "Exit & Save", :id => "exit_button", :class => "saveexit replacement" %>
+      <% end %>
+        <%= submit_tag "Save & Continue", :class => "submit replacement" %>
+      </div>
+    </div>
   <% end %>
 </div>
+<%= javascript "plugins/metadata", "plugins/validate", "questionnaire/default" %>
