--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -149,6 +149,22 @@ body {background:white url(../images/bg/body.png) repeat-x;font:12px "Trebuchet 
 #trademark table th {text-align:left;width:200px;}
 #register form p.fix {float:left;height:91px !important;width:400px;}
 
+/*Questionnaire*/
+#questionnaire {margin-top:20px;}
+#questionnaire form label {font-size:11px;}
+#questionnaire form p {background:url(../images/bg/input_04.jpg) left 20px no-repeat;height:auto !important;height:70px;min-height:70px;}
+#questionnaire form p textarea {height:50px;margin:10px 0 10px 10px;background-color:#EFEFEF;width:920px;}
+#questionnaire #more_info {cursor:pointer;}
+#questionnaire #info_text {background:url(../images/bg/info.jpg) bottom left no-repeat;padding:5px 20px 20px 20px;display:none;}
+#questionnaire form #actions {margin-top:20px;}
+#questionnaire form #actions input {cursor:pointer;}
+#questionnaire form #progress_bar {float:left;width:400px;background-color:yellow;}
+#questionnaire form #buttons {float:right;text-align:right;}
+#questionnaire form #buttons input.submit {margin:5px 0 0 0;float:left;width:155px;height:26px;background:url(../images/bt/save_and_continue.jpg) no-repeat;}
+#questionnaire form #buttons .saveexit {float:left;width:116px;height:26px;background:url(../images/bt/exit_and_save.jpg) no-repeat;margin:5px 10px 0 10px;}
+#questionnaire form #buttons .back {float:left;width:66px;height:26px;background:url(../images/bt/back.jpg) no-repeat;margin-top:5px;}
+#questionnaire form #buttons a {text-decoration:none;color:white;}
+
 /*Footer*/
 #footer {clear:both;background:url(../images/bg/footer.png) no-repeat;height:45px;padding:10px 20px 0 20px;font-size:10px;line-height:16px;}
 #footer ul {float:left;margin:10px 145px 0 0;}
@@ -156,5 +172,5 @@ body {background:white url(../images/bg/body.png) repeat-x;font:12px "Trebuchet 
 
 /* Messages */
 label.error  {color:red; font-weight:normal;margin-top:5px;}
-div.notice {border:solid 2px green;background-color:#B2DFB8;color:green;padding:3px 5px;}
-div.error {border:solid 2px red;background-color:#FDB5AF;color:red;padding:3px 5px;}
+div.notice {border:solid 2px green;background-color:#B2DFB8;color:green;padding:3px 5px;float:right;margin:60px -200px 0 0;}
+div.error {border:solid 2px red;background-color:#FDB5AF;color:red;padding:3px 5px;float:right;margin:60px -200px 0 0;}
