--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -158,7 +158,7 @@ body {background:white url(../images/bg/body.png) repeat-x;font:12px "Trebuchet 
 #questionnaire #info_text {background:url(../images/bg/info.jpg) bottom left no-repeat;padding:5px 20px 20px 20px;display:none;}
 #questionnaire form #actions {margin-top:20px;}
 #questionnaire form #actions input {cursor:pointer;}
-#questionnaire form #progress_bar {float:left;width:400px;background-color:yellow;}
+#questionnaire form #progress_bar {float:left;text-align:center;padding-top:5px;width:200px;height:21px;background:url(../images/bg/progress_bar.jpg) no-repeat;margin-top:5px;}
 #questionnaire form #buttons {float:right;text-align:right;}
 #questionnaire form #buttons input.submit {margin:5px 0 0 0;float:left;width:155px;height:26px;background:url(../images/bt/save_and_continue.jpg) no-repeat;}
 #questionnaire form #buttons .saveexit {float:left;width:116px;height:26px;background:url(../images/bt/exit_and_save.jpg) no-repeat;margin:5px 10px 0 10px;}
