--- a/app/views/questionnaire/payment.html.erb
+++ b/app/views/questionnaire/payment.html.erb
@@ -1,6 +1,20 @@
-<h1>Questionnaire &raquo; Payment</h1>
+<h1>Provisional Patent Questionnaire &raquo; Payment</h1>
 <div class="content_cms">
   Please make the payment of <%= number_to_currency @order.total %>
   <p><%= @cart.checkout_button %></p>
-  <%= link_to "Back", questionnaire_terms_path %>
 </div>
+<div id="questionnaire">
+  <%= error_messages_for @object.class.to_s.underscore.to_sym %>
+  <div id="actions">
+    <div id="progress_bar">
+      <div style="width:<%= progress_bar(Question.all.size+1.to_i)%>%;">&nbsp;</div>
+      <p>PROGRESS BAR (<%= progress_bar(Question.all.size+1.to_i)%>%)</p>
+      <%= image_tag "bg/progress_bar_left_mask.png" %>
+      <%= image_tag "bg/progress_bar_right_mask.png", :class => "right" %>
+    </div>
+    <div id="buttons">
+      <%= link_to "Back", questionnaire_terms_path, :class => "back replacement" %>
+    </div>
+  </div>
+</div>
+<%= javascript "plugins/metadata", "plugins/validate", "questionnaire/default" %>
