--- a/app/views/questionnaire/_question.html.erb
+++ b/app/views/questionnaire/_question.html.erb
@@ -1,10 +1,10 @@
 <%= f.hidden_field :order_id, :value => @order.id %>
 <%= f.hidden_field :question_id, :value => @question.id %>
 <%= f.hidden_field :save_and_exit, :value => "" %>
-<p>
+<div id="field_set">
   <%= f.label :body, "<strong>#{params[:position].to_i+1}.</strong> #{question.name}" %>
   <%= f.text_area :body %>
-</p>
+</div>
 <%= image_tag "bt/info_tab.jpg", :alt => "More Information", :id => "more_info" %>
 <div id="info_text">
   <%= question.help %>
