--- a/app/views/questionnaire/payment.html.erb
+++ b/app/views/questionnaire/payment.html.erb
@@ -1,7 +1,7 @@
 <h1>Provisional Patent Questionnaire &raquo; Payment</h1>
 <div class="content_cms">
   Please make the payment of <%= number_to_currency @order.total %>
-  <p><%= @cart.checkout_button %></p>
+  <%= @cart.checkout_button %>
 </div>
 <div id="questionnaire">
   <%= error_messages_for @object.class.to_s.underscore.to_sym %>
@@ -9,7 +9,7 @@
     <div id="progress_bar">
       <div style="width:<%= progress_bar(Question.all.size+1.to_i)%>%;">&nbsp;</div>
       <p>PROGRESS BAR (<%= progress_bar(Question.all.size+1.to_i)%>%)</p>
-      <%= image_tag "bg/progress_bar_left_mask.png" %>
+      <%= image_tag "bg/progress_bar_left_mask.png", :class => "left" %>
       <%= image_tag "bg/progress_bar_right_mask.png", :class => "right" %>
     </div>
     <div id="buttons">
@@ -17,4 +17,3 @@
     </div>
   </div>
 </div>
-<%= javascript "plugins/metadata", "plugins/validate", "questionnaire/default" %>
