--- a/app/views/questionnaire/questions.html.erb
+++ b/app/views/questionnaire/questions.html.erb
@@ -10,7 +10,7 @@
       <div id="progress_bar">
         <div style="width:<%= progress_bar(params[:position].to_i)%>%;">&nbsp;</div>
         <p>PROGRESS BAR (<%= progress_bar(params[:position].to_i)%>%)</p>
-        <%= image_tag "bg/progress_bar_left_mask.png" %>
+        <%= image_tag "bg/progress_bar_left_mask.png", :class => "left" %>
         <%= image_tag "bg/progress_bar_right_mask.png", :class => "right" %>
       </div>
       <div id="buttons">
