--- a/app/views/questionnaire/terms.html.erb
+++ b/app/views/questionnaire/terms.html.erb
@@ -15,7 +15,7 @@
   <%= error_messages_for @object.class.to_s.underscore.to_sym %>
   <% form_for(@terms, :url => questionnaire_terms_path, :live_validations => true, :html => { :method => :post }) do |f| %>
     <h2><%= @terms.name %></h2>
-    <p class="terms_big">
+    <p id="terms_big">
       <%= f.text_area :terms_text, :value => @terms.body, :disable=> true %>
     </p>
     <p class="checkbox_small">
@@ -26,7 +26,7 @@
       <div id="progress_bar">
         <div style="width:<%= progress_bar(Question.all.size.to_i)%>%;">&nbsp;</div>
         <p>PROGRESS BAR (<%= progress_bar(Question.all.size.to_i)%>%)</p>
-        <%= image_tag "bg/progress_bar_left_mask.png" %>
+        <%= image_tag "bg/progress_bar_left_mask.png", :class => "left" %>
         <%= image_tag "bg/progress_bar_right_mask.png", :class => "right" %>
       </div>
       <div id="buttons">
