revision for layout and links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
           <li><%= link_to "About Us", page_path("about-us") %></li>
           <li><%= link_to "Sitemap", page_path("sitemap") %></li>
           <li><%= link_to "Privacy", page_path("privacy") %></li>
-          <li><%= link_to "Terms of Use", page_path("terms-of-use") %></li>
+          <li class="last"><%= link_to "Terms of Use", page_path("terms-of-use") %></li>
         </ul>
         <p>&copy; Copyright Patent Lock&trade; - <%= link_to 'Professional Website Design', 'http://www.dburnsdesign.com', :target => '_blank' %> by DBurns Design</p>
         <p>Patent Lock&trade; is a service of the Law Office of Michael N. Cohen, P.C.</p>
