--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,22 +1,22 @@
 <%= f.error_messages %>
 <p>
-  <%= f.label :name %>
+  <%= f.label :name, "Name:" %>
   <%= f.text_field :name, :class => "{required:true}" %>
 </p>
 <p>
-  <%= f.label :email %>
+  <%= f.label :email, "Email:" %>
   <%= f.text_field :email, :class => "{required:true, email:true}" %>
 </p>
 <p>
-  <%= f.label :login, "Login" %>
+  <%= f.label :login, "Login:" %>
   <%= f.text_field :login, :class => "{required:true, login:true}" %>
 </p>
 <p>
-  <%= f.label :password, "Password" %>
+  <%= f.label :password, "Password:" %>
   <%= f.password_field :password, :class => "{" + ((params[:action] == "edit") ? "" : "required:true, ") + "minlength:6}" %>
 </p>
 <p>
-  <%= f.label :password_confirmation %>
+  <%= f.label :password_confirmation, "Password Confirmation:" %>
   <%= f.password_field :password_confirmation, :class => "{" + ((params[:action] == "edit") ? "" : "required:true, ") + "equalTo: '#user_password'}" %>
 </p>
 <p class ="checkbox">
