--- a/app/views/mailer/trademark_application.html.erb
+++ b/app/views/mailer/trademark_application.html.erb
@@ -1,4 +1,4 @@
-<h1>Trademark Registration Form <%= SITE_DOMAIN %></h1>
+<h1>Trademark Application Form <%= SITE_DOMAIN %></h1>
 <p>&nbsp;</p>
 <table>
 	<% @params.each do |param, value| %>
